Fixed anchor point and vertical text alignment

--- a/Website/style.css
+++ b/Website/style.css
@@ -96,7 +96,7 @@
 
 .content-body{
   z-index: 1;
-  margin: 75px 100px;
+  margin:-120px 0 0; /* negative fixed header height */
 }
 
 .about-title{
@@ -105,7 +105,7 @@
   width: 100%;
   font-size: 50px;
   font-weight: 900;
-  padding: 0 0 75px 0;
+  padding: 195px 0 75px 0;
 }
 
 .content-body .about-wrapper{
@@ -122,6 +122,7 @@
   border: 3px solid grey;
   background-color: white;
   z-index: 3;
+  display: flex;
   max-width: 500px;
   min-width: 500px;
   text-align: center;
